--- a/css/design.css
+++ b/css/design.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     background-color: #F5E6E8;
-    font-family: 'Amatic SC';
+    font-family: 'Roboto';
     font-size: 50px;
     text-align: center;
 }
